2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Add board as fourth argument.
	(save_res): Only run if there is a result file, and put all
	results to log.
	* dejagnu/baseboards/arc-linux-generic.exp: Take the
	target_install data from ${target_triplet}.
	* dejagnu/baseboards/arc-sim-base.exp: Likewise.
	* run-elf32-tests.sh: Add board when running tests.
	* run-tests.sh (ARC_TEST_TARGET): Correct typo in default value
	* run-uclibc-tests.sh: Add board when running tests
	* site.exp: Only set target_list if not already set. Error if not
	a recognized ARC triplet.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Correct commenting.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add option to control building of unified source
	tree.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Break out the generic
	Linux setup into its own file, specify target in environment variable.
	* dejagnu/baseboards/arc-linux-generic.exp: Generic set up shared
	between all Linux boards.
	* dejagnu/baseboards/arc-linux-nsim.exp: Created.
	* run-tests.sh (--target): New option to specify target address.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh (--enable-multilib, --disable-multilib): Add
	argument handling accidentally deleted.

2013-01-31  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Add options to control parallelism
	* all-version.sh: Remove specification of PARALLEL

2013-01-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (save_res): Append errors to log, not overwrite.
	* dejagnu/baseboards/arc-linux-aa4.exp: Improve commenting, and
	general password field.
	* run-elf32-tests.sh: Add target_dir.
	* run-tests.sh: Tidy up error messages. Add better commenting
	* run-uclibc-tests.sh: Make target_dir generic, tidy up layout
